--- a/.env
+++ b/.env
@@ -1,33 +1,2 @@
-VITE_ORDERLY_BROKER_ID=demo
-VITE_ORDERLY_BROKER_NAME=testing_twendee_001
-VITE_ORDERLY_MAINNET_CHAINS=1,56,1329,43114,146,900900900,1514,80094,42161,10,5000,8453,34443,2741,98866,2818
-VITE_ORDERLY_TESTNET_CHAINS=
-VITE_DEFAULT_CHAIN=
-VITE_TELEGRAM_URL=
-VITE_DISCORD_URL=
-VITE_TWITTER_URL=
-VITE_WALLETCONNECT_PROJECT_ID=
-VITE_PRIVY_APP_ID=
-VITE_PRIVY_TERMS_OF_USE=
-VITE_ENABLED_MENUS=Trading,Markets
-VITE_CUSTOM_MENUS=
-VITE_ENABLE_ABSTRACT_WALLET=false
-VITE_DISABLE_MAINNET=false
-VITE_DISABLE_TESTNET=false
-VITE_DISABLE_EVM_WALLETS=false
-VITE_DISABLE_SOLANA_WALLETS=false
-VITE_ENABLE_CAMPAIGNS=false
-VITE_HAS_PRIMARY_LOGO=false
-VITE_HAS_SECONDARY_LOGO=false
-VITE_USE_CUSTOM_PNL_POSTERS=false
-VITE_CUSTOM_PNL_POSTER_COUNT=0
-VITE_TRADING_VIEW_COLOR_CONFIG=
-VITE_AVAILABLE_LANGUAGES=vi
-VITE_SEO_SITE_NAME=
-VITE_SEO_SITE_DESCRIPTION=
-VITE_SEO_SITE_URL=https://dex.orderly.network/testingtwendee001-4184/
-VITE_SEO_SITE_LANGUAGE=
-VITE_SEO_SITE_LOCALE=
-VITE_SEO_TWITTER_HANDLE=
-VITE_SEO_THEME_COLOR=
-VITE_SEO_KEYWORDS=
+# Build-time environment variables only
+# Runtime configuration is in /public/config.js
